<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/harry_the_heap"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="4.71"
        android:contentDescription="@string/harry_the_heap"
        android:onClick="onClick"
        android:src="@drawable/harry_the_heap" />

    <TextView
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#A60066cc"
        android:gravity="center"
        android:text="@string/go_green_main"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="500dp"
        android:layout_height="430dp"
        android:layout_gravity="center"
        android:layout_weight="3.92"
        android:background="#73000000"
        android:fillViewport="true" >

        <TextView
            android:layout_width="490dp"
            android:layout_height="400dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/go_green_main_desc"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </ScrollView>

</LinearLayout>